Found that the page doesn't show up correctly on smaller screens and phones. Fixed that, and did other QoL improvements.

--- a/style.css
+++ b/style.css
@@ -9,11 +9,13 @@ body {
 .container {
     display: grid;
     grid-template-columns: 1fr 6fr;
-    grid-template-rows: 1fr 5fr auto;
+    grid-template-rows: 1fr 5fr;
 
     height: 100vh;
 }
 
+
+/* HEADER */
 .header {
     grid-column: 2 / -1;
     grid-row: 1 / 2;
@@ -77,227 +79,6 @@ body {
     gap: 25px;
 }
 
-.sidebar {
-    grid-column: 1 / 2;
-    grid-row: 1 / -1;
-
-    background-color: rgb(24, 146, 211);
-
-    display: grid;
-    grid-template-rows: auto auto 1fr;
-    gap: 15px;
-}
-
-.main-content {
-    grid-column: 2 / -1;
-    grid-row: 2 / -1;
-
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-    grid-template-rows: 1fr 15fr;
-    gap: 25px;
-}
-
-.side-options {
-    padding-left: 25px;
-    font-size: larger;
-}
-
-a {
-    display: block;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    margin-left: 0;
-    margin-right: 0;
-    color: white;
-
-    text-decoration: none;
-}
-
-a:hover {
-    text-shadow: 1px 1px 2px white;
-}
-
-a:active {
-    text-shadow: -1px 1px 2px black;
-}
-
-a {
-    transition: all .2s ease-in-out;
-}
-
-a:active {
-    transform: scale(0.98);
-}
-
-.cards {
-    grid-row: 2 / -1;
-    grid-column: 1 / -2;
-
-    padding: 25px;
-    padding-top: 5px;
-
-    display: grid;
-
-    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
-    grid-template-rows: repeat(auto-fit, minmax(50px, 1fr));
-    gap: 25px;
-
-    min-width: 0;
-    overflow: hidden;
-}
-
-.main-text {
-    margin-left: 20px;
-}
-
-.main-text>p {
-    margin-top: 25px;
-    margin-bottom: 0;
-}
-
-.card {
-    background-color: white;
-
-    min-width: 0;
-    overflow: hidden;
-
-    position: relative;
-
-    border-radius: 5px;
-
-    box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.10);
-}
-
-.right-side {
-    grid-column: -2 / -1;
-    margin-right: 15px;
-    margin-bottom: 25px;
-    margin-top: 5px;
-
-    display: grid;
-    gap: 25px;
-    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
-    grid-template-rows: repeat(auto-fit, minmax(50px, 1fr));
-}
-
-.card>a {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-
-    margin: 0;
-}
-
-.card>p {
-    position: absolute;
-    bottom: 10px;
-    left: 10px;
-
-    color: white;
-    font-size: larger;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-}
-
-.card>img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-}
-
-.card:last-child {
-    grid-column: 1 / -1;
-}
-
-.right-side>div {
-    padding: 25px;
-}
-
-.card-side {
-    background-color: white;
-
-    overflow: hidden;
-
-    border-radius: 5px;
-
-    box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.10);
-
-    position: relative;
-}
-
-.card-side>p {
-    font-size: large;
-    color: rgb(80, 80, 80);
-}
-
-.top-card-text {
-    display: block;
-    font-size: x-large;
-    font-weight: bolder;
-    color: black;
-}
-
-.card:hover,
-.card-side:hover {
-    outline: solid;
-}
-
-
-.card:hover {
-    font-size: larger;
-}
-
-.card {
-    transition: all .2s ease-in-out;
-}
-
-.card:active {
-    transform: scale(0.9);
-}
-
-.card-side>a {
-    position: absolute;
-
-    top: 0;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-
-    margin: 0;
-}
-
-.side-options>div>a>img {
-    width: 25px;
-    height: 25px;
-
-    filter: brightness(0) invert(1);
-}
-
-.side-options>a>img {
-    width: 40px;
-    height: 40px;
-
-    filter: brightness(0) invert(1);
-
-    margin-right: 5px;
-}
-
-.side-options>div>a>img {
-    margin-right: 5px;
-}
-
-.side-options:first-child {
-    padding-left: 10px;
-}
-
-.side-options>a,
-.side-options>div>a {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-}
 
 .user-area,
 .container-header {
@@ -350,4 +131,227 @@ a:active {
 
 .container-header:last-child {
     gap: 25px;
+}
+
+
+/* SIDEBAR */
+.sidebar {
+    grid-column: 1 / 2;
+    grid-row: 1 / -1;
+
+    background-color: rgb(24, 146, 211);
+
+    display: grid;
+    grid-template-rows: auto auto 1fr;
+    gap: 15px;
+}
+
+.side-options {
+    padding-left: 25px;
+    font-size: larger;
+}
+
+
+.side-options>div>a>img {
+    width: 25px;
+    height: 25px;
+
+    filter: brightness(0) invert(1);
+}
+
+.side-options>a>img {
+    width: 40px;
+    height: 40px;
+
+    filter: brightness(0) invert(1);
+
+    margin-right: 5px;
+}
+
+.side-options>div>a>img {
+    margin-right: 5px;
+}
+
+.side-options:first-child {
+    padding-left: 10px;
+}
+
+.side-options>a,
+.side-options>div>a {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+
+/* CARDS AREA */
+.main-content {
+    grid-column: 2 / -1;
+    grid-row: 2 / -1;
+
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 15fr;
+    gap: 25px;
+}
+
+
+a {
+    display: block;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 0;
+    margin-right: 0;
+    color: white;
+
+    text-decoration: none;
+}
+
+a:hover {
+    text-shadow: 1px 1px 2px white;
+}
+
+a:active {
+    text-shadow: -1px 1px 2px black;
+}
+
+a {
+    transition: all .2s ease-in-out;
+}
+
+a:active {
+    transform: scale(0.98);
+}
+
+.cards {
+    grid-row: 2 / -1;
+    grid-column: 1 / -2;
+
+    padding: 25px;
+    padding-top: 5px;
+
+    display: grid;
+
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(50px, 1fr));
+    gap: 25px;
+
+    min-width: 0;
+    overflow: hidden;
+}
+
+.main-text {
+    margin-left: 20px;
+}
+
+.main-text>p {
+    margin-top: 25px;
+    margin-bottom: 0;
+}
+
+.card {
+    background-color: white;
+
+    min-width: 0;
+    overflow: hidden;
+
+    position: relative;
+
+    border-radius: 5px;
+
+    box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.10);
+}
+
+.right-side {
+    grid-column: -2 / -1;
+    margin-right: 15px;
+    margin-bottom: 25px;
+    margin-top: 5px;
+
+    display: grid;
+    gap: 25px;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(50px, 1fr));
+}
+
+.card>a {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+
+    margin: 0;
+}
+
+.card>p {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+
+    color: white;
+    font-size: larger;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
+.card>img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.right-side>div {
+    padding: 25px;
+}
+
+.card-side {
+    background-color: white;
+
+    overflow: hidden;
+
+    border-radius: 5px;
+
+    box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.10);
+
+    position: relative;
+}
+
+.card-side>p {
+    font-size: large;
+    color: rgb(80, 80, 80);
+}
+
+.top-card-text {
+    display: block;
+    font-size: x-large;
+    font-weight: bolder;
+    color: black;
+}
+
+.card:hover,
+.card-side:hover {
+    outline: solid;
+}
+
+.card:hover {
+    font-size: larger;
+}
+
+.card {
+    transition: all .2s ease-in-out;
+}
+
+.card:active {
+    transform: scale(0.9);
+}
+
+.card-side>a {
+    position: absolute;
+
+    top: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+
+    margin: 0;
 }
